# CXMFEditor

./: .clang-format  .editorconfig  CMakeLists.txt  CMakeSettings.json  CXMFEditor.fbp  LICENSE.txt  README.md
cmake/: dependencies.cmake
resources/: resource.rc
src/: AssimpDefs.cpp  AssimpDefs.hpp  CXMF.cpp  CXMF.hpp  CXMFEditor.cpp  CXMFEditor.h  ModelPreview.cpp  ModelPreview.hpp  main.cpp  resource.h
